2005-08-30  Luke Gorrie  <luke@synap.se>

	* present.lisp: Added public domain dedication (OK'd by Alanr and
	Matthias on the list).

2005-08-29  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank-lispworks.lisp (env-internals:confirm-p): Use new function
	y-or-n-p-in-emacs rather than eval-in-emacs.

	* swank-cmucl.lisp (eval-in-emacs): Removed.
	(send-to-emacs): New.
	(pre-gc-hook, post-gc-hook): Use new protocol message
	:background-message rather than eval-in-emacs.

	* swank.lisp (dispatch-event, send-to-socket-io): Handle new
	messages :y-or-n-p, :background-message.  
	(y-or-n-p-in-emacs): New function.

	* slime.el (slime-dispatch-event): Handle new messages :y-or-n-p,
	:background-message. 
	(slime-y-or-n-p): New.

2005-08-29  Alan Ruttenberg <alanr-l@mumble.net>
	* slime.el (sldb-insert-condition) - Add tooltip for long
	condition string which otherwise falls off the right of the screen

2005-08-29  Juho Snellman  <jsnell@iki.fi>

	* swank-sbcl.lisp (make-weak-key-hash-table): Remove the 
        implementation; SBCL doesn't actually support weak hash-tables.

2005-08-28  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-repl-kill-input): New command.
	(slime-repl-mode-map): Bind it to C-c C-u, like in comint.
	(slime-repl-easy-menu): Include it in the REPL menu.
	(slime-repl-mode-hook): Show the SLIME menu in the REPL too.

	* swank-backend.lisp (make-weak-key-hash-table)
	(make-weak-value-hash-table): New interfaces.
	* swank-cmucl.lisp (make-weak-key-hash-table): Implement it.
	* swank-sbcl.lisp (make-weak-key-hash-table): Implement it.
	* swank-openmcl.lisp (make-weak-key-hash-table) 
	(make-weak-value-hash-table): Implement it.

	* swank.lisp (*object-to-presentation-id*)
	(*presentation-id-to-object*): Use new functions
	make-weak-key-hash-table, make-weak-value-hash-table.

	* slime.el (slime-enable-evaluate-in-emacs): New variable.
	(evaluate-in-emacs): Security improvement: If